--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>N</span>
     </div>
     <div class="description">
-        <span>SMANGAT JIHAN NGERJAIN BELAJARNYA YA :>....</span>
+        <span>SMANGAT JIHAN BELAJARNYA YA :>....</span>
         <span>SEMOGA BESOK DAPAT HASIL YANG MEMUASKAN :>....</span>
     </div>
     <div class="button">
